# travel-agent

./: .app.env  .gitignore  Dockerfile  MANIFEST.in  README.md  compose.yaml  pyproject.toml
src/travel_agent/: __main__.py  constants.py  context.py  l10n.py  middlewares.py  models.py  repositories.py  types.py  utils.py
src/travel_agent/callbacks/: help.py  settings.py  travel.py
src/travel_agent/handlers/: __init__.py  help.py  locations.py  note.py  routes.py  settings.py  start.py  travel.py
src/travel_agent/locales/: ru.ftl
src/travel_agent_bot/: __main__.py  context.py  middlewares.py  models.py  repositories.py
src/travel_agent_bot/callbacks/: echo.py  help.py  settings.py  start.py
src/travel_agent_bot/repositories/: user.py
