[project]
name = "travel-agent-bot"
version = "1.0"
description = "Implementation of Travel Agent 3.0 by @samylovma"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Mikhail Samylov", email = "Samylov-Mikhail@yandex.com"},
]
dependencies = [
    "python-telegram-bot>=21.0.1",
    "advanced-alchemy>=0.7.4",
    "asyncpg>=0.29.0",
]
